fix vertical scrollbar background color in light mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,7 +84,6 @@
     --code-bg: hsl(220, 13%, 18%);
     --code-text: hsl(0, 0%, 100%);
     --coffee: rgb(202, 71, 0);
-    --scroll: hsl(220, 13%, 18%);
     --pagefind-ui-text: rgb(164, 174, 188);
     --pagefind-ui-background: rgb(51, 65, 85);
     --svg: invert(93%) sepia(78%) saturate(2834%) hue-rotate(213deg) brightness(148%) contrast(96%);
@@ -118,7 +117,7 @@ body {
   font-smooth: always;
 }
 ::-webkit-scrollbar, ::-webkit-scrollbar-track {
-  background-color: var(--scroll);
+  background-color: var(--code-bg);
   width: 0.35em;
 }
 ::-webkit-scrollbar-thumb {
